# SDL_Learn_Windows

./: CMakeLists.txt  main.c
03_Event_Driven_Programming/: main.c
04-optimized_surface_loading_and_soft_streching/: main.c
05_extension_libraries_and_loading_other_image_formats/: main.c
06_Geometry_rendering/: main.c
07_ViewPort/: main.c
08-color-keying/: LTexture.c  main.c
08-color-keying/headers/: LTexture.h
09-Clip-Rendering-and-Sprite-Sheets/: main.c
09-Clip-Rendering-and-Sprite-Sheets/LTexture/: LTexture.c  LTexture.h
10-Color-Modulation/: main.c
10-Color-Modulation/LTexture/: LTexture.c  LTexture.h
11-Alpha-Blending/: main.c
11-Alpha-Blending/LTexture/: LTexture.c  LTexture.h
12-Animated-Sprites-And-VSync/: main.c
12-Animated-Sprites-And-VSync/LTexture/: LTexture.c  LTexture.h
13-Rotation-And-Flipping/: main.c
13-Rotation-And-Flipping/LTexture/: LTexture.c  LTexture.h
14-True-Type-Fonts/: main.c
14-True-Type-Fonts/LTexture/: LTexture.c  LTexture.h
15-mouse-events/: main.c
15-mouse-events/LTexture/: LTexture.c  LTexture.h
Aula-2-Close-window/: main.c
Aula-3-Background/: main.c
